# Aqua-Sniper

./: LICENSE  README.md  RUN.bat  config.json  credentials.yaml  pyproject.toml  session.py  sniper.py  tasks.py  user.py  utils.py
aqua_sniper/: __init__.py  __main__.py  items.py  sniper.py  user.py  user_session.py  utils.py
